<resources>
    <string name="app_name">Simple Games</string>

    <!-- Bottom Navigation -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="maze">Maze</string>

    <!-- Login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_prompt">Don\'t have an account? <font color='#FF0000'>Sign Up</font></string>
    <string name="login_prompt">Already have an account? <font color='#FF0000'>Login</font></string>

    <!-- Profile -->
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="high_scores">High Scores</string>
    <string name="privacy">Privacy Setting</string>
    <string name="logout">Logout</string>
    <string name="no_high_scores">No high scores yet. Start playing!</string>

    <!-- Leaderboard -->
    <string name="friends_only">Friends Only</string>

    <!-- Edit Profile -->
    <string name="username">Username</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_account">Delete Account</string>

    <!--  WhackAMole  -->
    <string name="score_format">Score: %d</string>
    <string name="lives_format">Lives: %d</string>
    <string name="timer_format">Time: %.2f</string>
    <string name="high_score_format">High Score: %d</string>
    <string name="score">Score:</string>
    <string name="time">Time:</string>
    <string name="lives">Lives:</string>
    <string name="start">Start Game</string>
    <string name="title">Whack-A-Mole</string>
    <string name="high_score">High Score:</string>
    <string name="clear">Clear High Score</string>
    <string name="zero">0</string>
</resources>