<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cyberpunk_urban_scenery"
        tools:context=".games.whackamole.WhackAMoleTitleFragment">

        <!-- Scrim Overlay -->
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4D000000" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/game_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp"
                android:translationZ="1dp">

                <TextView
                    android:id="@+id/score_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/hud_background"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/score"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/hud_background"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/score_format"
                    android:textColor="#FFFFFF" />

                <View
                    android:layout_width="20dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/timer_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/hud_background"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/time"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/hud_background"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/timer_format"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/game_info_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:translationZ="1dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/hud_background"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/lives"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/lives"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/hud_background"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/lives_format"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <GridLayout
                android:id="@+id/game_board"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:columnCount="3"
                android:rowCount="3"
                android:translationZ="1dp">

                <ImageButton
                    android:id="@+id/mole_0"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/mole_transparent"
                    android:backgroundTint="@color/black"
                    android:text="Button" />

                <ImageButton
                    android:id="@+id/mole_4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_margin="20dp"
                    android:background="@drawable/mole_transparent"
                    android:backgroundTint="@color/black"
                    android:text="Button" />

                <ImageButton
                    android:id="@+id/mole_8"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/mole_transparent"
                    android:backgroundTint="@color/black"
                    android:text="Button" />

                <ImageButton
                    android:id="@+id/mole_1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_margin="20dp"
                    android:background="@drawable/mole_transparent"
                    android:backgroundTint="@color/black"
                    android:text="Button" />

                <ImageButton
                    android:id="@+id/mole_2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/mole_transparent"
                    android:backgroundTint="@color/black"
                    android:text="Button" />

                <ImageButton
                    android:id="@+id/mole_5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/mole_transparent"
                    android:backgroundTint="@color/black"
                    android:text="Button" />

                <ImageButton
                    android:id="@+id/mole_3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/mole_transparent"
                    android:backgroundTint="@color/black"
                    android:text="Button" />

                <ImageButton
                    android:id="@+id/mole_6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/mole_transparent"
                    android:backgroundTint="@color/black"
                    android:text="Button" />

                <ImageButton
                    android:id="@+id/mole_7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_margin="20dp"
                    android:background="@drawable/mole_transparent"
                    android:backgroundTint="@color/black"
                    android:text="Button" />
            </GridLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>